--- a/StewardClient/src/app/pages/tools/pages/user-banning/pages/forum/forum-banning.component.html
+++ b/StewardClient/src/app/pages/tools/pages/user-banning/pages/forum/forum-banning.component.html
@@ -119,7 +119,7 @@
                   [monitor]="banActionMonitor"
                   monitorDisable
                   [permissionAttribute]="permAttribute"
-                  permissionTitle="forum"
+                  [permissionTitle]="permTitle"
                 >
                   Verify ban
                 </mat-checkbox>
