--- a/StewardClient/src/app/shared/views/player-inventory-profiles/player-inventory-profile-picker.component.html
+++ b/StewardClient/src/app/shared/views/player-inventory-profiles/player-inventory-profile-picker.component.html
@@ -16,11 +16,15 @@
     <mat-icon
       *ngIf="profile.isCurrentByTitleId"
       class="leading-icon"
-      [matTooltip]="'Profile active for title ID: ' + profile.titleId">
+      [matTooltip]="'Profile active for title ID: ' + profile.titleId"
+    >
       person
     </mat-icon>
     <mat-icon
-      *ngIf="!profile.isCurrentByTitleId" class="leading-icon" matTooltip="Profile Inactive">
+      *ngIf="!profile.isCurrentByTitleId"
+      class="leading-icon"
+      matTooltip="Profile Inactive"
+    >
       person_off
     </mat-icon>
     <span class="id" [matTooltip]="'Profile ID: ' + profile.profileId">{{
