--- a/StewardClient/src/app/sidebars/contact-us/contact-us.component.html
+++ b/StewardClient/src/app/sidebars/contact-us/contact-us.component.html
@@ -21,7 +21,7 @@
         </mat-label>
       </div>
       <div class="sf-horizontal">
-        <mat-form-field appearance="fill">
+        <mat-form-field appearance="fill" class="sf-default-hint">
           <mat-label>Feature Description</mat-label>
           <textarea
             matInput
@@ -98,7 +98,7 @@
         </mat-label>
       </div>
       <div class="sf-horizontal">
-        <mat-form-field appearance="fill">
+        <mat-form-field appearance="fill" class="sf-default-hint">
           <mat-label>Bug Description</mat-label>
           <textarea
             matInput
@@ -108,7 +108,7 @@
         </mat-form-field>
       </div>
       <div class="sf-horizontal">
-        <mat-form-field appearance="fill">
+        <mat-form-field appearance="fill" class="sf-default-hint">
           <mat-label>Reproduction Steps</mat-label>
           <textarea
             matInput
