Implement PR feedback

--- a/StewardClient/src/app/pages/tools/pages/user-details/user-details.component.html
+++ b/StewardClient/src/app/pages/tools/pages/user-details/user-details.component.html
@@ -73,6 +73,7 @@
   >
   <span class="icon-spacer"></span>
   <player-selection-single
+    [disableLookupTypes]="['t10Id']"
     [displayInSingleLine]="true"
     [specialIdentitiesAllowed]="specialIdentitiesAllowed"
     (found)="found($event)"
