--- a/StewardClient/src/app/pages/tools/pages/leaderboards/components/leaderboard-scores/leaderboard-scores.component.html
+++ b/StewardClient/src/app/pages/tools/pages/leaderboards/components/leaderboard-scores/leaderboard-scores.component.html
@@ -91,11 +91,16 @@
         >
           Unselect all
         </button>
+        <verify-button
+          #verifyBtnMultiDelete
+          [permissionAttribute]="permAttribute"
+          [permissionTitle]="gameTitle"
+        ></verify-button>
         <button
           mat-raised-button
           color="warn"
           [disabled]="selectedScores?.length <= 0"
-          [verifyWith]="verifyCheckboxMultiDelete"
+          [verifyWithV2]="verifyBtnMultiDelete"
           (click)="deleteScores(selectedScores)"
           clickStop
           stateManager
@@ -110,18 +115,6 @@
             <ng-template ngPluralCase="other">scores</ng-template>
           </span>
         </button>
-        <mat-checkbox
-          clickStop
-          #verifyCheckboxMultiDelete
-          [(ngModel)]="isMultiDeleteActive"
-          ngDefaultControl
-          stateManager
-          [permissionAttribute]="permAttribute"
-          [permissionTitle]="gameTitle"
-          matTooltip="Check to enable deletion"
-        >
-          Verify Multi-Delete
-        </mat-checkbox>
         <button
           mat-raised-button
           color="primary"
@@ -243,11 +236,16 @@
               </button>
 
               <div class="delete-score">
+                <verify-button
+                  #verifyBtn
+                  [permissionAttribute]="permAttribute"
+                  [permissionTitle]="gameTitle"
+                ></verify-button>
                 <button
                   mat-raised-button
                   color="warn"
                   [disabled]="selectedScores?.length > 0"
-                  [verifyWith]="verifyCheckbox"
+                  [verifyWithV2]="verifyBtn"
                   (click)="deleteScores([entry])"
                   clickStop
                   stateManager
@@ -258,16 +256,6 @@
                 >
                   Delete
                 </button>
-                <mat-checkbox
-                  stateManager
-                  [permissionAttribute]="permAttribute"
-                  [permissionTitle]="gameTitle"
-                  clickStop
-                  #verifyCheckbox
-                  matTooltip="Check to enable deletion"
-                >
-                  Verify
-                </mat-checkbox>
               </div>
             </td>
           </ng-container>
