--- a/StewardClient/src/app/pages/tools/pages/ugc-details/pages/woodstock-lookup/woodstock-lookup.component.html
+++ b/StewardClient/src/app/pages/tools/pages/ugc-details/pages/woodstock-lookup/woodstock-lookup.component.html
@@ -54,11 +54,17 @@
               </mat-form-field>
             </div>
             <div class="sf-horizontal">
+              <verify-button
+                #verifyReportBtn
+                [permissionAttribute]="reportPermAttribute"
+                [permissionTitle]="gameTitle"
+                [disabled]="!selectedReason"
+              ></verify-button>
               <button
                 class="sf-action-list-margins sf-grow-1"
                 mat-raised-button
                 color="warn"
-                [verifyWith]="verifyReport"
+                [verifyWithV2]="verifyReportBtn"
                 (click)="reportUgcItem()"
                 stateManager
                 [monitor]="reportMonitor"
@@ -70,26 +76,22 @@
               >
                 <span>Report</span>
               </button>
-              <mat-checkbox
-                clickStop
-                #verifyReport
-                stateManager
-                [permissionAttribute]="reportPermAttribute"
-                [permissionTitle]="gameTitle"
-                matTooltip="Check to enable report UGC."
-              >
-                Verify
-              </mat-checkbox>
             </div>
 
             <ng-content select="button"></ng-content>
 
             <div class="sf-horizontal">
+              <verify-button
+                [disabled]="!canHideUgc"
+                #verifyHideBtn
+                [permissionAttribute]="hidePermAttribute"
+                [permissionTitle]="gameTitle"
+              ></verify-button>
               <button
                 class="sf-action-list-margins sf-grow-1"
                 mat-raised-button
                 color="warn"
-                [verifyWith]="verifyHide"
+                [verifyWithV2]="verifyHideBtn"
                 (click)="hideUgcItem()"
                 stateManager
                 [monitor]="hideMonitor"
@@ -104,23 +106,20 @@
                 </help-popover-icon>
                 Hide UGC
               </button>
-              <mat-checkbox
-                #verifyHide
-                stateManager
-                [permissionAttribute]="hidePermAttribute"
-                [permissionTitle]="gameTitle"
-                [disabled]="!canHideUgc"
-                matTooltip="Verify Deletion"
-                >Verify</mat-checkbox
-              >
             </div>
 
             <div class="sf-horizontal">
+              <verify-button
+                [disabled]="!canPersistUgc"
+                #verifyPersistBtn
+                [permissionAttribute]="persistPermAttribute"
+                [permissionTitle]="gameTitle"
+              ></verify-button>
               <button
                 class="sf-action-list-margins sf-grow-1"
                 mat-raised-button
                 color="accent"
-                [verifyWith]="verifyPersist"
+                [verifyWithV2]="verifyPersistBtn"
                 (click)="persistUgcItem()"
                 stateManager
                 [monitor]="persistMonitor"
@@ -137,22 +136,20 @@
                 </help-popover-icon>
                 Persist UGC
               </button>
-              <mat-checkbox
-                #verifyPersist
-                matTooltip="Verify Persist"
-                stateManager
-                [permissionAttribute]="persistPermAttribute"
-                [permissionTitle]="gameTitle"
-                >Verify</mat-checkbox
-              >
             </div>
 
             <div class="sf-horizontal">
+              <verify-button
+                [disabled]="!canCloneUgc"
+                #verifyCloneBtn
+                [permissionAttribute]="clonePermAttribute"
+                [permissionTitle]="gameTitle"
+              ></verify-button>
               <button
                 class="sf-action-list-margins sf-grow-1"
                 mat-raised-button
                 color="accent"
-                [verifyWith]="verifyClone"
+                [verifyWithV2]="verifyCloneBtn"
                 (click)="cloneUgcItem()"
                 stateManager
                 [monitor]="cloneMonitor"
@@ -180,14 +177,6 @@
                 </help-popover-icon>
                 Clone UGC
               </button>
-              <mat-checkbox
-                #verifyClone
-                matTooltip="Verify Clone"
-                stateManager
-                [permissionAttribute]="clonePermAttribute"
-                [permissionTitle]="gameTitle"
-                >Verify</mat-checkbox
-              >
             </div>
           </div>
         </div>
