--- a/StewardClient/src/app/pages/tools/pages/user-banning/pages/apollo/apollo-banning.component.html
+++ b/StewardClient/src/app/pages/tools/pages/user-banning/pages/apollo/apollo-banning.component.html
@@ -53,6 +53,12 @@
             <form [formGroup]="formGroup">
               <ban-options [formControl]="formControls.banOptions"></ban-options>
               <div class="ban-action-container">
+                <verify-button
+                  [disabled]="!canBan()"
+                  #verifyConfirmBanBtn
+                  [permissionAttribute]="permAttribute"
+                  [permissionTitle]="gameTitle"
+                ></verify-button>
                 <button
                   mat-raised-button
                   color="warn"
@@ -62,22 +68,12 @@
                   monitorDisable
                   [monitor]="banActionMonitor"
                   [disabled]="!canBan()"
-                  [verifyWith]="confirmBan"
+                  [verifyWithV2]="verifyConfirmBanBtn"
                   matTooltip="Create or force replace pipeline (even if it is in an UNSAFE state)"
                 >
                   Ban
                   <button-spinner [monitor]="banActionMonitor" defaultIcon="gavel"></button-spinner>
                 </button>
-                <mat-checkbox
-                  #confirmBan
-                  stateManager
-                  [monitor]="banActionMonitor"
-                  monitorDisable
-                  [permissionAttribute]="permAttribute"
-                  [permissionTitle]="gameTitle"
-                >
-                  Verify ban
-                </mat-checkbox>
               </div>
             </form>
           </ng-container>
