--- a/StewardClient/src/app/pages/tools/pages/welcome-center-tiles/steelhead/steelhead-welcome-center-tiles.component.html
+++ b/StewardClient/src/app/pages/tools/pages/welcome-center-tiles/steelhead/steelhead-welcome-center-tiles.component.html
@@ -126,24 +126,22 @@
               <th mat-header-cell *matHeaderCellDef>Actions</th>
               <td mat-cell *matCellDef="let entry">
                 <div *waitForMonitor="entry.monitor">
+                  <verify-button
+                    #verifyAbandonBtn
+                    [permissionAttribute]="permAttribute"
+                    [permissionTitle]="gameTitle"
+                  ></verify-button>
                   <button
                     mat-raised-button
                     color="warn"
                     (click)="abandonPullRequest(entry)"
                     clickStop
                     stateManager
-                    [verifyWith]="verifyAbandon"
+                    [verifyWithV2]="verifyAbandonBtn"
                   >
                     Abandon
                     <mat-icon>delete</mat-icon>
                   </button>
-                  <mat-checkbox
-                    #verifyAbandon
-                    stateManager
-                    [permissionAttribute]="permAttribute"
-                    [permissionTitle]="gameTitle"
-                    >Verify</mat-checkbox
-                  >
                 </div>
               </td>
             </ng-container>
