--- a/StewardClient/src/app/shared/components/localization/create-localized-string/create-localized-string.component.html
+++ b/StewardClient/src/app/shared/components/localization/create-localized-string/create-localized-string.component.html
@@ -53,6 +53,11 @@
         </mat-form-field>
 
         <div class="sf-horizontal">
+          <verify-button
+            #verifySubmissionBtn
+            [permissionAttribute]="permAttribute"
+            [permissionTitle]="service?.gameTitle"
+          ></verify-button>
           <button
             class="sf-standard-width"
             mat-raised-button
@@ -64,7 +69,7 @@
             monitorDisable
             monitorWarnSnackbar
             monitorCompleteSnackbar
-            [verifyWith]="verifySubmission"
+            [verifyWithV2]="verifySubmissionBtn"
           >
             Submit
             <button-spinner
@@ -72,15 +77,6 @@
               defaultIcon="arrow_circle_right"
             ></button-spinner>
           </button>
-          <mat-checkbox
-            #verifySubmission
-            stateManager
-            [permissionAttribute]="permAttribute"
-            [permissionTitle]="service?.gameTitle"
-            matTooltip="Verify Submission"
-            aria-label="Verify Submission"
-            >Verify</mat-checkbox
-          >
         </div>
       </div>
     </form>
