--- a/StewardClient/src/app/shared/views/player-hidden-ugc/hidden-ugc-table/hidden-ugc-table.component.html
+++ b/StewardClient/src/app/shared/views/player-hidden-ugc/hidden-ugc-table/hidden-ugc-table.component.html
@@ -82,11 +82,16 @@
         <td mat-cell *matCellDef="let entry">
           <ng-container *ngIf="!disableUnhide; else unhideDisabledTemplate">
             <div class="unhide-score">
+              <verify-button
+                #verifyUnhideBtn
+                [permissionAttribute]="unhidePermAttribute"
+                [permissionTitle]="gameTitle"
+              ></verify-button>
               <button
                 mat-raised-button
                 color="warn"
                 matTooltip="Unhide this UGC"
-                [verifyWith]="verifyUnhide"
+                [verifyWithV2]="verifyUnhideBtn"
                 (click)="unhideUgcItem(entry)"
                 clickStop
                 stateManager
@@ -99,16 +104,6 @@
               >
                 Unhide UGC
               </button>
-              <mat-checkbox
-                clickStop
-                #verifyUnhide
-                stateManager
-                [permissionAttribute]="unhidePermAttribute"
-                [permissionTitle]="gameTitle"
-                matTooltip="Check to enable unhide UGC"
-              >
-                Verify
-              </mat-checkbox>
             </div>
           </ng-container>
         </td>
