--- a/StewardClient/src/app/pages/tools/pages/user-banning/pages/sunrise/sunrise-banning.component.html
+++ b/StewardClient/src/app/pages/tools/pages/user-banning/pages/sunrise/sunrise-banning.component.html
@@ -55,7 +55,7 @@
               <div class="ban-action-container">
                 <verify-button
                   [disabled]="!canBan()"
-                  #verifyBtn
+                  #verifyConfirmBanBtn
                   [permissionAttribute]="permAttribute"
                   [permissionTitle]="gameTitle"
                 ></verify-button>
@@ -68,7 +68,7 @@
                   monitorDisable
                   [monitor]="banActionMonitor"
                   [disabled]="!canBan()"
-                  [verifyWithV2]="verifyBtn"
+                  [verifyWithV2]="verifyConfirmBanBtn"
                   matTooltip="Create or force replace pipeline (even if it is in an UNSAFE state)"
                 >
                   Ban
